# favilib

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.direnv/: nix-profile-24.05-y45vqv6pa8bhgag1  nix-profile-24.05-y45vqv6pa8bhgag1.rc
src/: cli.rs  errors.rs  lib.rs  scraper.rs
