[package]
name = "favilib"
version = "0.3.0"
edition = "2021"
description = "Library for fetching and parsing favicons from websites"
keywords = ["favicon", "icon"]
repository = "https://github.com/Pascal736/favilib"
license = "MIT"
readme = "README.md"
authors = ["Pascal Pfeiffer <PaPfeiffer@proton.me>"]


[lib]
name = "favilib"
path = "src/lib.rs"


[[bin]]
name = "favilib"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.81"
clap = {version = "4.5.4", features = ["derive"]}
image = "0.25.1"
reqwest = {version = "0.12.3", features = ["blocking" ]}
scraper = "0.19.0"
thiserror = "1.0.58"
url = "2.5.0"
