[package]
name = "favilib"
version = "0.5.1"
edition = "2021"
description = "Library for fetching and parsing favicons from websites"
keywords = ["favicon", "icon"]
repository = "https://github.com/Pascal736/favilib"
license = "MIT"
readme = "README.md"
authors = ["Pascal Pfeiffer <PaPfeiffer@proton.me>"]


[lib]
name = "favilib"
path = "src/lib.rs"


[[bin]]
name = "favilib"
path = "src/cli.rs"

[dependencies]
anyhow = "^1"
clap = {version = "^4", features = ["derive"]}
image = "^0.25"
reqwest = {version = "^0.12", features = ["blocking" ]}
scraper = "^0.19"
thiserror = "^1"
url = "^2"
